--- a/index.html
+++ b/index.html
@@ -104,7 +104,9 @@
             grow
             their online presence. In addition, I offer web design services, to help bring your vision to life.
           </p>
-          <button class="cvbtn">Download CV</button>
+          <a href="images/VISHAV MAHALA CV-1.pdf" download="Vishav's CV">
+            <button class="cvbtn">Download CV</button>
+          </a>
 
         </div>
         <div class="right-side">
@@ -192,15 +194,12 @@
             <div class="content">
               <a href="project.html">
                 <span class="title">
-                  Restaurant
+                  TCS
                 </span>
               </a>
 
               <p class="desc">
-                A restaurant is a culinary establishment where patrons dine in and enjoy prepared meals. It offers a
-                diverse menu of dishes, often reflecting a specific cuisine or theme. Restaurants vary from casual to
-                fine dining, providing a social setting for individuals and groups to experience diverse culinary
-                delights.
+                At the heart of <span>C-A-F-E</span> is our commitment to exceptional coffee. Sourced from the finest beans, our expertly crafted blends and single-origin selections promise a journey of flavors with every sip. From the robust notes of our signature espresso to the delicate nuances of our pour-over brews, each cup is a celebration of quality and dedication..
               </p>
 
               <a class="action" href="project.html">
