--- a/project.html
+++ b/project.html
@@ -72,13 +72,10 @@
                         <img src="images/caffe.png" alt="">
                     </div>
                     <div class="projectDet">
-                        <h1><span class="vishav"> <a href="">CAFFE</a></span></h1>
+                        <h1><span class="vishav"> <a href="">TCS</a></span></h1>
                         <span class="detl">TEA/COFFE</span>
                         <hr>
-                        <p>A restaurant is a culinary establishment where patrons dine in and enjoy prepared meals. It offers a
-                            diverse menu of dishes, often reflecting a specific cuisine or theme. Restaurants vary from casual to
-                            fine dining, providing a social setting for individuals and groups to experience diverse culinary
-                            delights.</p>
+                        <p>At the heart of <span>C-A-F-E</span> is our commitment to exceptional coffee. Sourced from the finest beans, our expertly crafted blends and single-origin selections promise a journey of flavors with every sip. From the robust notes of our signature espresso to the delicate nuances of our pour-over brews, each cup is a celebration of quality and dedication..</p>
                         <br>
                         <hr>
 
