--- a/contact.html
+++ b/contact.html
@@ -69,14 +69,16 @@
                     <span class="wlcm crd">Email</span>
                     <div class="socialbox">
 
-                        <img src="images/logo/icons8-v-arcade-120.png" alt="">
+                        <a href=""><img src="images/icons/contact/gmail/icons8-email-52.png"
+                                style="width: 70px; margin: 15px;" alt=""></a>
                     </div>
 
                 </div>
                 <div class="card">
                     <span class="wlcm crd">Github</span>
                     <div class="socialbox">
-                        <img src="images/github/icons8-github-glyph-neue-96.png" alt="">
+                        <a href="https://github.com/vishav-11">
+                            <img src="images/github/icons8-github-glyph-neue-96.png" alt=""></a>
 
                     </div>
 
@@ -84,7 +86,9 @@
                 <div class="card">
                     <span class="wlcm crd">Linkedin</span>
                     <div class="socialbox">
-                        <img src="images/linkedin/white 16-120.png" alt="">
+                        <a href="https://www.linkedin.com/in/vishav-mahala-36688a246/">
+                            <img src="images/icons/contact/linked/icons8-linked-in-100.png"
+                                style="width: 70px; margin: 15px;" alt=""></a>
 
                     </div>
 
@@ -93,22 +97,27 @@
                 <div class="card">
                     <span class="wlcm crd">Phone</span>
                     <div class="socialbox">
-                        <img src="images/icons/call/icons8-call-96.png" alt="">
+                        <a href="">
+                            <img src="images/icons/call/icons8-call-96.png" alt=""></a>
 
 
                     </div>
                 </div>
 
             </div>
+        </section>
+        <footer class="footer">
+            <div class="myFooter">
+                <p><span class="crtBy">Created By </span><span class="crtMe">VISHAV</span></p>
+            </div>
+        </footer>
 
 
-            <footer>
-
-            </footer>
 
 
-            <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
-            <script src="main.js"></script>
+
+        <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+        <script src="main.js"></script>
 </body>
 
 </html>
