--- a/about.html
+++ b/about.html
@@ -47,8 +47,7 @@
                                         src="images/github/icons8-github-glyph-neue-32.png" alt=""
                                         style="color: black;"></a>
                             </li>
-                            <li>
-                                <button class="hirebtn">Hire Me</button>
+                            <li><a href="contact.html"><button class="hirebtn">Hire Me</button></a>>
                             </li>
                         </ul>
                     </div>
