--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
                                         style="color: black;"></a>
                             </li>
                             <li>
-                                <button class="hirebtn">Hire Me</button>
+                                <a href="contact.html"><button class="hirebtn">Hire Me</button></a>
                             </li>
                         </ul>
                     </div>
