--- a/project.html
+++ b/project.html
@@ -50,7 +50,7 @@
                                         style="color: black;"></a>
                             </li>
                             <li>
-                                <button class="hirebtn">Hire Me</button>
+                                <a href="contact.html"><button class="hirebtn">Hire Me</button></a>
                             </li>
                         </ul>
                     </div>
