--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                     <span class="wlcm crd">Email</span>
                     <div class="socialbox">
 
-                        <a href=""><img src="images/icons/contact/gmail/icons8-email-52.png"
+                        <a href=""><img src="images/icons8-email-52.png"
                                 style="width: 70px; margin: 15px;" alt=""></a>
                     </div>
 
@@ -86,8 +86,8 @@
                 <div class="card">
                     <span class="wlcm crd">Linkedin</span>
                     <div class="socialbox">
-                       <a href="https://www.linkedin.com/in/vishav-mahala-36688a246/">
-                            <img src="images/icons/contact/linked/icons8-linked-in-100.png"
+                      <a href="https://www.linkedin.com/in/vishav-mahala-36688a246/">
+                            <img src="images/linkedin/icons8-linked-in-100.png"
                                 style="width: 70px; margin: 15px;" alt=""></a>
 
                     </div>
